# unixcw-3.5.1

./: AUTHORS  ChangeLog  HISTORY  INSTALL  INSTALLING  Makefile  Makefile.am  Makefile.in  Makefile.inc  Makefile.inc.in  NEWS  README  THANKS  TODO  autogen.sh  configure  configure.ac  configure.qt.inc  icon_unixcw.xpm  libtool  missing  qa_build_debian.sh  qa_compile_headers.sh  qa_test_configure_flags.sh  qa_valgrind_cwcp.sh  qa_valgrind_libcw_test_internal.sh  qa_valgrind_libcw_test_public.sh  qa_valgrind_xcwcp.sh  unixcw-2.3.lsm  unixcw-2.3.spec  unixcw-3.0.1.lsm  unixcw-3.0.lsm  unixcw-3.2.0.lsm  unixcw-3.3.0.lsm  unixcw-3.3.1.lsm  unixcw-3.4.1.lsm  unixcw-3.5.0.lsm  unixcw-3.5.1.lsm
debian/: README.debian  changelog  control  copyright  cw.config  cw.postinst  cw.postrm  cw.preinst  cw.templates  cwcp.config  cwcp.menu  cwcp.postinst  cwcp.postrm  cwcp.preinst  cwcp.templates  libcw3-dev.install  libcw3.dirs  libcw3.install  libcw4-dev.install  libcw4.install  libcw5-dev.install  libcw5.dirs  libcw5.install  libcw6.dirs  libcw6.install  rules  xcwcp.config  xcwcp.menu  xcwcp.postinst  xcwcp.postrm  xcwcp.preinst
debian/po/: ast.po  cs.po  de.po  es.po  fr.po  it.po  ja.po  nl.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  templates.pot
src/: Makefile  Makefile.in  config.h.in
src/cw/: Makefile  Makefile.am  Makefile.in  cw.1  cw.c  cw.h  demo.cw  prelude.cw  test.cw
src/cwcp/: Makefile  Makefile.am  Makefile.in  cwcp.1  cwcp.c
src/cwgen/: Makefile  Makefile.am  Makefile.in  Makefile.port.in  cwgen.1  cwgen.c
src/cwlib/: Makefile  cw.7  cwlib.3.m4  cwlib.c  cwlib.h  cwlibtest.c  include.awk  libdoc.awk  libfuncs.awk  libpc.awk  libsigs.awk
src/cwutils/: Makefile  Makefile.am  Makefile.in  cmdline.c  cmdline.h  copyright.h  cw_common.c  cw_common.h  cw_copyright.h  cw_words.h  cwwords.h  dictionary.c  dictionary.h  i18n.c  i18n.h  memory.c  memory.h
src/libcw/: .clang-tidy  Doxyfile  Makefile  Makefile.am  Makefile.in  cw.7  cwlib.h  include.awk  libcw.3.m4  libcw.c  libcw.h  libcw.pc.in  libcw2.h  libcw_alsa.c  libcw_alsa.h  libcw_console.c  libcw_console.h  libcw_data.c  libcw_data.h  libcw_data_tests.c  libcw_data_tests.h  libcw_debug.c  libcw_debug.h  libcw_debug.py  libcw_debug_tests.c  libcw_debug_tests.h  libcw_gen.c  libcw_gen.h  libcw_gen_internal.h  libcw_gen_tests.c  libcw_gen_tests.h  libcw_iambic_keyer.c  libcw_internal.h  libcw_ipc.h  libcw_key.c  libcw_key.h  libcw_key_tests.c  libcw_key_tests.h  libcw_legacy_tests.c  libcw_legacy_tests.h  (+35 more)
src/libcw/tests/: .clang-tidy  Makefile.am  Makefile.in  README  count_functions_under_test.py  libcw_data_tests.c  libcw_data_tests.h  libcw_debug_tests.c  libcw_debug_tests.h  libcw_gen_tests.c  libcw_gen_tests.h  libcw_key_tests.c  libcw_key_tests.h  libcw_legacy_api_sets.c  libcw_legacy_api_sets.inc  libcw_legacy_api_tests.c  libcw_legacy_api_tests.h  libcw_rec_tests.c  libcw_rec_tests.h  libcw_test.c  libcw_test.h  libcw_test_driver.c  libcw_test_framework.c  libcw_test_framework.h  libcw_test_legacy_api_test_sets.c  libcw_test_legacy_api_test_sets.inc  libcw_test_legacy_api_tests.c  libcw_test_legacy_api_tests.h  libcw_test_public.c  libcw_test_simple_gen.c  libcw_test_tq_short_space.c  libcw_test_tq_short_space.h  libcw_test_utils.c  libcw_test_utils.h  libcw_tq_tests.c  libcw_tq_tests.h  libcw_utils_tests.c  libcw_utils_tests.h  test_all_driver.c  test_all_sets.c  (+6 more)
src/simplecw/: Makefile.am  Makefile.in  application.cc  application.h  main.cc  modeset.cc  modeset.h  receiver.cc  receiver.h  sender.cc  sender.h  textarea.cc  textarea.h
src/xcwcp/: Makefile  Makefile.am  Makefile.in  application.cc  application.h  display.cc  display.h  main.cc  modeset.cc  modeset.h  receiver.cc  receiver.h  sender.cc  sender.h  start.xpm  textarea.cc  textarea.h  xcwcp.1
src/xcwcp/icons/: icon_mini_unixcw.xpm  icon_mini_unixcw.xpm~  icon_stop.xpm~
tools/: test_configure_flags.sh
